<resources>
    <string name="app_name">Colors</string>
    <string name="welcome_t1">WELCOME TO COLORS</string>
    <string name="welcome_t2">A Marketplace Where Every Product Tells a Unique Story!</string>
    <string name="welcome_t3">Sign Up</string>
    <string name="welcome_t4">Sign In</string>
    <string name="welcome_t5">Get Start With</string>
    <string name="welcome_t6">or</string>
    <string name="signIn_t1">Don\'t have an account?</string>
    <string name="signUp_t1">You already have an account?</string>
    <string name="home_t1">Discover Colors</string>
    <string name="home_t2">Search product...</string>
    <string name="home_t3">Category</string>
    <string name="home_t4">Top Sale </string>
    <string name="cart_t1">My Cart</string>
    <string name="cart_t2">Subtotal</string>
    <string name="cart_t3">Shipping</string>
    <string name="cart_t4">TOTAL</string>
    <string name="cart_t5">Checkout</string>
    <string name="order_t1">My Order</string>
    <string name="order_t2">Qty:</string>
    <string name="order_t3">Related Products</string>
    <string name="adsearch_t1">Find Your Product</string>
    <string name="adsearch_t2">Min:</string>
    <string name="adsearch_t3">Max:</string>
    <string name="myproduct_t1">My Products</string>
    <string name="myproduct_t111">My Products Dashboard</string>
    <string name="myproduct_t2">Orders</string>
    <string name="myproduct_t3">Products</string>
    <string name="myproduct_t4">Profit percentage %</string>
    <string name="myproduct_t5">Products</string>
    <string name="myproduct_t6">Total Profit</string>
    <string name="myproduct_t7">Total selling product qty:</string>
    <string name="myproduct_t8">Most selling product: </string>
    <string name="myproduct_t9">Available qty: </string>
    <string name="myproduct_t10">Selling qty;</string>
    <string name="myproduct_t11">Profit: </string>
    <string name="myproduct_t12">Update</string>
    <string name="myproduct_t13">Status</string>
    <string name="addproduct_t1">Add your product</string>
    <string name="addproduct_t2">Add quality three images here</string>
    <string name="addproduct_t3">Product name</string>
    <string name="addproduct_t4">Product price</string>
    <string name="addproduct_t5">Product Qty</string>
    <string name="addproduct_t6">Product category</string>
    <string name="addproduct_t7">Add product</string>
    <string name="addproduct_t8">We charge a small 10% fee to keep the app running smoothly and guarantee a safe delivery for your product!</string>
    <string name="addproduct_t9">Product description</string>
    <string name="cusomerOrder_t">Customer Orders</string>
    <string name="cusomerOrder_t2">Customer Details</string>
    <string name="cusomerOrder_t3">Customer Orders</string>
    <string name="cusomerOrder_t4">Customer Orders</string>
    <string name="profile_t1">Contact Profile</string>
    <string name="profile_t2">Contact Information</string>
    <string name="profile_t3">Website: </string>
    <string name="profile_t4">Email: </string>
    <string name="profile_t5">Phone: </string>
    <string name="profile_t6">Contact Information </string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_cart">Cart</string>
    <string name="title_orders">My orders</string>
    <string name="title_my_products">My products</string>


</resources>