<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart3"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/order"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_my_product"
        android:icon="@drawable/box"
        android:title="@string/title_my_products" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/title_profile" />

</menu>