<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:backgroundTint="@color/cream"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="271dp"
        android:layout_height="96dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/playfairdisplay_regular"
        android:text="@string/welcome_t1"
        android:textAlignment="center"
        android:textColor="@color/dark_brown"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="354dp"
        android:layout_height="90dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/pacifico_regular"
        android:text="@string/welcome_t2"
        android:textAlignment="center"
        android:textColor="@color/dark_brown"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="332dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/olive_green"
        android:fontFamily="@font/lato_regular"
        android:text="@string/welcome_t3"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="411dp"
        android:layout_height="345dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_img7"

        />

    <Button
        android:id="@+id/button2"
        android:layout_width="331dp"
        android:layout_height="60dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/terracotta"
        android:fontFamily="@font/lato_regular"
        android:text="@string/welcome_t4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.637"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/welcome_t5"
        android:textColor="@color/dark_brown"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_regular"
        android:text="@string/welcome_t6"
        android:textColor="@color/dark_brown"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.464" />

</androidx.constraintlayout.widget.ConstraintLayout>