<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    tools:context=".AddProductActivity">

    <TextView
        android:id="@+id/textView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/addproduct_t1"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="28dp"
        android:layout_height="35dp"
        android:layout_marginStart="148dp"
        android:src="@drawable/bell"
        app:layout_constraintBottom_toBottomOf="@+id/textView34"
        app:layout_constraintStart_toEndOf="@+id/textView34"
        app:layout_constraintTop_toTopOf="@+id/textView34"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/addproduct_t2"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addproductimageView2" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/addproduct_t8"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/addproduct_t3"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView35" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/addproduct_t6"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPqty" />

    <EditText
        android:id="@+id/editTextTextPname"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:includeFontPadding="true"
        android:inputType="text"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView36" />

    <EditText
        android:id="@+id/editTextText2Pprice"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="text"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView37" />

    <TextView
        android:id="@+id/textView37"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/addproduct_t4"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPname" />

    <EditText
        android:id="@+id/editTextTextPqty"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:paddingLeft="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/addproduct_t5"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText2Pprice" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="350dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <Button
        android:id="@+id/button8"
        android:layout_width="350dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/terracotta"
        android:fontFamily="@font/lato_regular"
        android:text="@string/addproduct_t7"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2" />

    <ImageView
        android:id="@+id/addproductimageView3"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/addproductimageView2"
        app:layout_constraintStart_toEndOf="@+id/addproductimageView2"
        app:layout_constraintTop_toTopOf="@+id/addproductimageView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/add" />

    <ImageView
        android:id="@+id/addproductimageView1"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView34"
        app:srcCompat="@drawable/add" />

    <ImageView
        android:id="@+id/addproductimageView2"
        android:layout_width="105dp"
        android:layout_height="105dp"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/addproductimageView1"
        app:layout_constraintStart_toEndOf="@+id/addproductimageView1"
        app:layout_constraintTop_toTopOf="@+id/addproductimageView1"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/add" />
</androidx.constraintlayout.widget.ConstraintLayout>