<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartFragment">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/cart_t1"
        android:textColor="@color/dark_brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="28dp"
        android:layout_height="35dp"
        android:layout_marginStart="264dp"


        android:src="@drawable/bell"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartrecyclerView"
        android:layout_width="375dp"
        android:layout_height="454dp"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <View
        android:id="@+id/view4"
        android:layout_width="379dp"
        android:layout_height="199dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartrecyclerView" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/cart_t2"
        android:textColor="@color/dark_brown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cartrecyclerView" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/cart_t3"
        android:textColor="@color/dark_brown"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/cart_t4"
        android:textColor="@color/dark_brown"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:layout_marginStart="144dp"
        android:text="Rs.0.00"
        android:textAlignment="textEnd"
        android:textColor="@color/dark_brown"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView18"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:layout_marginStart="140dp"
        android:text="free"
        android:textAlignment="textEnd"
        android:textColor="@color/dark_brown"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView19"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toTopOf="@+id/textView19"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="135dp"
        android:layout_height="25dp"
        android:layout_marginStart="140dp"
        android:text="Rs.0.00"
        android:textAlignment="textEnd"
        android:textColor="@color/dark_brown"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView20"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/textView20"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="343dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/olive_green"
        android:fontFamily="@font/lato_regular"
        android:text="@string/cart_t5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />


</androidx.constraintlayout.widget.ConstraintLayout>