<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.my_product.my_productFragment">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/myproduct_t111"
        android:textColor="@color/dark_brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="28dp"
        android:layout_height="35dp"


        android:layout_marginStart="216dp"
        android:src="@drawable/bell"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button7"
        android:layout_width="151dp"
        android:layout_height="44dp"
        android:layout_marginStart="56dp"
        android:backgroundTint="@color/olive_green"
        android:fontFamily="@font/lato_regular"
        android:text="@string/myproduct_t3"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/button5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="151dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/dark_brown"
        android:fontFamily="@font/lato_regular"
        android:text="@string/myproduct_t2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <View
        android:id="@+id/view2"
        android:layout_width="388dp"
        android:layout_height="304dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barchart"
        android:layout_width="355dp"
        android:layout_height="265dp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/view2"
        app:layout_constraintVertical_bias="0.512" />

    <View
        android:id="@+id/view3"
        android:layout_width="189dp"
        android:layout_height="215dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChart"
        android:layout_width="191dp"
        android:layout_height="177dp"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/myproduct_t4"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pieChart" />

    <View
        android:id="@+id/view5"
        android:layout_width="189dp"
        android:layout_height="103dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <View
        android:id="@+id/view7"
        android:layout_width="189dp"
        android:layout_height="103dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toEndOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view5" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="111dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/myproduct_t7"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/view5"
        app:layout_constraintTop_toTopOf="@+id/view5" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="123dp"
        android:layout_height="25dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/myproduct_t6"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/view7"
        app:layout_constraintTop_toTopOf="@+id/view7" />

    <TextView
        android:id="@+id/textView33"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/lato_regular"
        android:text="0"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView32"
        app:layout_constraintStart_toEndOf="@+id/textView32"
        app:layout_constraintTop_toTopOf="@+id/textView32" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lato_regular"
        android:text="Rs.0.00"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView38"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="@+id/textView38"
        app:layout_constraintTop_toBottomOf="@+id/textView38" />

    <View
        android:id="@+id/view8"
        android:layout_width="391dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edittext_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view7" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/myproduct_t8"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8"
        app:layout_constraintVertical_bias="0.365" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/lato_regular"
        android:text="Clay ovel Pot"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView40"
        app:layout_constraintStart_toEndOf="@+id/textView40"
        app:layout_constraintTop_toTopOf="@+id/textView40"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>